--- a/app/globals.css
+++ b/app/globals.css
@@ -46,3 +46,51 @@ body {
     margin: 30px;
   }
 }
+
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h2 {
+  margin: 20px;
+  line-height: 1.15;
+  font-size: 2rem;
+}
+
+nav {
+  display: flex;
+  background-color: rgba(0, 0, 0, 0.3);
+  color: rgb(255, 255, 255);
+  padding: 8px;
+  padding-left: 16px;
+  /* round boarders*/
+  border-radius: 10px;
+  margin: 8;
+}
+
+ul {
+  width: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  float: right;
+}
+
+li {
+  margin: 0 10px;
+}
+
+a {
+  color: #ffffff;
+  font-weight: 400;
+  text-decoration: none;
+  background-color: inherit;
+  transition: color 0.3s ease;
+}
+
+a:hover {
+  color: #0070f3;
+}
