--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,2 +1,8 @@
-.main {
+#TwitchLink {
+  color: #6441a5;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 1.5rem;
+  margin: 0 0.5rem;
+  transition: color 0.15s ease;
 }
