--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,8 +1,21 @@
-#TwitchLink {
-  color: #6441a5;
-  text-decoration: none;
-  font-weight: bold;
-  font-size: 1.5rem;
-  margin: 0 0.5rem;
-  transition: color 0.15s ease;
+@media (prefers-color-scheme: dark) {
+  #TwitchLink {
+    color: #cdbeea;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin: 0 0.5rem;
+    transition: color 0.15s ease;
+  }
+}
+
+@media (prefers-color-scheme: light) {
+  #TwitchLink {
+    color: #6441a5;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin: 0 0.5rem;
+    transition: color 0.15s ease;
+  }
 }
