--- a/app/components/ProfilePicDropdown.module.css
+++ b/app/components/ProfilePicDropdown.module.css
@@ -2,3 +2,8 @@
   @apply absolute right-0 mt-2 w-48 bg-white border rounded shadow;
   @apply dark:bg-gray-500;
 }
+
+.linkItem {
+  @apply block rounded-md px-4 py-2;
+  @apply hover:bg-pink-200 hover:rounded-lg;
+}
